QPID-8731: [Broker-J] Security Manager removal (#391)
* QPID-8731: [Broker-J] Update broker build to java 21 / Security manager removal

* QPID-8731: [Broker-J] Change build to java 17 / 21 / 25 MR jar

* QPID-8731: [Broker-J] Restored queue names

---------

Co-authored-by: vavrtom <cz235351@tiscali.cz>